--- a/src/main/resources/templates/viewAPost.html
+++ b/src/main/resources/templates/viewAPost.html
@@ -2,6 +2,7 @@
 <!-- This is for using Thymeleaf -->
 <html xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8">
+<link th:href="@{/style/viewblogpost.css}" rel="stylesheet" />
 
 <header th:insert="fragments/header">
 	</header>
@@ -10,7 +11,7 @@
 <body>
 
 	<h3 th:text="${blogpost.postTitle}"></h3>
-	<p th:text="${blogpost.postDateTime}" ></p>
+	<p th:text="${blogpost.postDateTime}"></p>
 	<br>
 	<br>
 	<p th:text="${blogpost.postContent}">
