--- a/src/main/resources/templates/makeApost.html
+++ b/src/main/resources/templates/makeApost.html
@@ -34,8 +34,8 @@
 	
 	<br>
 	<!-- The link which sends GET request to "/"  -->
-	<a th:href="@{/}"
-		class="blue-text">Back</a>
-		
 </body>
+
+<footer th:insert="fragments/footer"></footer>
+
 </html>
