--- a/src/main/resources/templates/makeApost.html
+++ b/src/main/resources/templates/makeApost.html
@@ -2,7 +2,7 @@
 <!-- This is for using Thymeleaf -->
 <html xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8">
-
+<link rel="stylesheet" th:href="@{/style/makeAPost.css}">
 <header th:insert="fragments/header">
 	</header>
 	
@@ -12,10 +12,10 @@
 	<!-- The th:action="@{/saveVisitor}" expression directs the form to POST to the /SaveVisitor endpoint.
 		 The th:object="${visitor}" expression declares the model object to use for collecting the form data.
 		 The three form fields, expressed with th:field, correspond to the fields in the Visitor object. -->
-	<form th:action="@{/SavePost}" th:object="${post}" method="post"><!-- Unfortunate coincidence that the method is the same as the object name -->
+	<form th:action="@{/SavePost}" th:object="${blogpost}" method="post"><!-- Unfortunate coincidence that the method is the same as the object name -->
 	
 		<div class="row">
-			<div class="input-field col s6">
+			<div>
 				<input id="post_title" type="text" class="validate"
 					th:field="*{postTitle}"> 
 				<label for="post_title">Title</label>
@@ -23,7 +23,7 @@
 		</div>
 		<br>
 		<div class="row">
-			<div class="input-field col s6">
+			<div>
 				<textarea id="post_content" th:field="*{postContent}" style="width: 75%; height: 117px; ">
 				Enter Your Thoughts...
 				</textarea>
