--- a/src/main/resources/templates/new_visitor.html
+++ b/src/main/resources/templates/new_visitor.html
@@ -5,12 +5,10 @@
 <meta charset="UTF-8">
 <title>Visitor Management System</title>
 <!-- Compiled and minified CSS -->
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<link rel="stylesheet">
 
 <!-- Compiled and minified JavaScript -->
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </head>
 <body style="max-width: 960px; margin: 16px auto; padding: 16px">
 	<h3>Add New Visitor</h3>
