--- a/src/main/resources/templates/update_visitor.html
+++ b/src/main/resources/templates/update_visitor.html
@@ -4,13 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Visitor Management System</title>
-<!-- Compiled and minified CSS -->
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-<!-- Compiled and minified JavaScript -->
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body style="max-width: 960px; margin: 16px auto; padding: 16px">
 	<h3>Update Visitor</h3>
@@ -38,12 +32,12 @@
 				<label for="quip">Quip</label>
 			</div>
 		</div>
-		<button type="submit" class="waves-effect waves-light btn">Update
+		<button type="submit">Update
 			Visitor</button>
 	</form>
 	<br>
 	<!-- The link which sends GET request to "/"  -->
-	<a th:href="@{/}"
+	<a th:href="@{/ListOfVisitors}"
 		class="blue-text">Back</a>
 </body>
 </html>
