--- a/src/main/resources/templates/listOfUsers.html
+++ b/src/main/resources/templates/listOfUsers.html
@@ -5,24 +5,23 @@
     <title>List Users</title>
 </head>
 <body>
-<div class="container text-center">
+<div>
     <div>
-    <!-- 
         <form th:action="@{/logout}" method="post">
             <p>
                 Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b>
             </p>
             <input type="submit" value="Sign Out" />
         </form>
-         -->
+         
     </div>
     <div>
         <h1>List of Users</h1>
     </div>
      
     <div>
-        <table class="table table-striped table-bordered">
-            <thead class="thead-dark">
+        <table>
+            <thead>
                 <tr>
                     <th>User ID</th>
                     <th>E-mail</th>
@@ -31,7 +30,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="user: ${listUsers}">
+                <tr th:each="user: ${listOfUsers}">
                     <td th:text="${user.id}">User ID</td>
                     <td th:text="${user.email}">E-mail</td>
                     <td th:text="${user.firstName}">First Name</td>
