--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,8 +16,8 @@
     <div class="container text-center">
         <h1>Login</h1>
         
-        <h3><a th:href="/@{/register}">Register</a></h3>
-        <h3><a th:href="/@{/login}">Login</a></h3>
+        <h3><a th:href="@{/register}">Register</a></h3>
+        <h3><a th:href="@{/login}">Login</a></h3>
     </div>
 	
 	</body>
