--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -17,32 +17,39 @@
             method="post" style="max-width: 600px; margin: 0 auto;">
         <div class="m-3">
             <div class="form-group row">
-                <label class="col-4 col-form-label">E-mail: </label>
-                <div class="col-8">
-                    <input type="email" th:field="*{email}" class="form-control" required />
+                <label>E-mail: </label>
+                <div>
+                    <input type="email" th:field="*{email}"required />
+                </div>
+            </div>
+            
+            <div>
+                <label>Username: </label>
+                <div>
+                    <input type="text" th:field="*{uname}"required />
                 </div>
             </div>
              
-            <div class="form-group row">
-                <label class="col-4 col-form-label">Password: </label>
-                <div class="col-8">
-                    <input type="password" th:field="*{password}" class="form-control" />
+            <div>
+                <label>Password: </label>
+                <div>
+                    <input type="password" th:field="*{password}" />
                             <!--HTML 5 thing... required minlength="6" maxlength="10"/>  -->
                 </div>
             </div>
              
             <div class="form-group row">
-                <label class="col-4 col-form-label">First Name: </label>
-                <div class="col-8">
-                    <input type="text" th:field="*{firstName}" class="form-control" />
+                <label >First Name: </label>
+                <div>
+                    <input type="text" th:field="*{firstName}"/>
                            <!-- required minlength="2" maxlength="20"/>  -->
                 </div>
             </div>
              
             <div class="form-group row">
-                <label class="col-4 col-form-label">Last Name: </label>
-                <div class="col-8">
-                    <input type="text" th:field="*{lastName}" class="form-control" />
+                <label>Last Name: </label>
+                <div>
+                    <input type="text" th:field="*{lastName}"/>
                     	<!-- required minlength="2" maxlength="20"/>  -->
                 </div>
             </div>
