--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,9 +22,10 @@
 		<a th:href="@{/blogPosts}">View Entries </a>
 	</nav>
 	
+	
 	<br></br>
 	
-	<a th:href="@{/login}"> Login if you're john</a>
+	<a th:href="@{/login}"> Login</a> || <a th:href="@{/register}"> Sign Up</a>
 	
 	</body>
 </html>
