--- a/src/main/resources/templates/viewAPost.html
+++ b/src/main/resources/templates/viewAPost.html
@@ -10,6 +10,7 @@
 <body>
 
 	<h3 th:text="${blogpost.postTitle}"></h3>
+	<p th:text="${blogpost.postAuthor}"></p>
 	<p th:text="${blogpost.postDateTime}"></p>
 	<br>
 	<p th:text="${blogpost.postContent}">
