Made posts editable by author and admin only

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -55,10 +55,12 @@
             </div>
              
             <div>
-                <button type="submit" class="btn btn-primary">Sign Up</button>
+                <button type="submit" class="btn btn-primary">Sign Up!</button>
             </div>
         </div>
         </form>
 	
 	</body>
+	
+	<div th:insert="fragments/footer"><</div>
 </html>
