Added page for viewing your (the logged in users) blog posts. Also some various refactoring.

--- a/src/main/resources/templates/edit_blogPost.html
+++ b/src/main/resources/templates/edit_blogPost.html
@@ -29,13 +29,13 @@
 				</textarea>
 			</div>
 		</div>
-		<button type="submit">Submit Post</button>
+		<button type="submit">Submit Edit</button>
 	</form>
 
 	<br>
 	<!-- The link which sends GET request to "/"  -->
 </body>
-
+<a th:href="@{/blogPosts}">Back</a>
 <footer th:insert="fragments/footer"></footer>
 
 </html>
