Changed iseditable attribute to the value of a service expression

--- a/src/main/resources/templates/view_a_Post.html
+++ b/src/main/resources/templates/view_a_Post.html
@@ -18,7 +18,8 @@
 <br>
 
 <a th:href="@{/blogPosts}">Back</a>
-<a th:if="${editable.postEditable}" th:href="@{/editAPost/{id}(id=${blogpost.id})}">|| Edit Post</a>
+<span th:if="${editable}"> || <a th:href="@{/editAPost/{id}(id=${blogpost.id})}"> Edit Post</a></span>
+
 </body>
 
 <footer th:insert="fragments/footer">
