changed column name post_author to uname in blogposts for data formatting sake.

--- a/src/main/resources/templates/blog_posts.html
+++ b/src/main/resources/templates/blog_posts.html
@@ -22,7 +22,7 @@
 			<tr th:each="bp: ${blogtitlelist}">
 				<td> <a th:href="@{/viewAPost/{id}(id=${bp.id})}" th:text="${bp.postTitle}"></a></td>
 				<td> <span th:text="${bp.postDateTime}"></span></td>
-				<td> <span th:text="${bp.postAuthor}"> </span></td>
+				<td> <span th:text="${bp.uname}"> </span></td>
 			
 			</tr>
 		</tbody>
