--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,11 +13,22 @@
 	
 	<body>
 	
-    <div class="container text-center">
+    <div>
         <h1>Login</h1>
         
+        <form th:action="@{/login}" method="post">
+   <div> 
+      <label> User Name : <input type="text" name="uname" /> </label> 
+   </div> 
+   <div> 
+   <label> Password: <input type="password" name="password" /> </label> 
+   </div> 
+   <div> 
+      <input type="submit" value="Sign In" /> </div> 
+      </form> 
+        
         <h3><a th:href="@{/register}">Register</a></h3>
-        <h3><a th:href="@{/login}">Login</a></h3>
+        
     </div>
 	
 	</body>
