--- a/src/main/resources/templates/view_a_Post.html
+++ b/src/main/resources/templates/view_a_Post.html
@@ -10,7 +10,7 @@
 <body>
 
 	<h3 th:text="${blogpost.postTitle}"></h3>
-	<p th:text="${blogpost.postAuthor}"></p>
+	<p th:text="${blogpost.uname}"></p>
 	<p th:text="${blogpost.postDateTime}"></p>
 	<br>
 	<p th:text="${blogpost.postContent}">
