--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,7 @@
 </head>
 
 	<header class="homeBanner" th:fragment="header">
-		<h1 id = "hometitle">It's the JLM Site !!!</h1>
+		<h1 th:href="@{/}" id = "hometitle">It's the JLM Site !!!</h1>
 	</header>
 	
 <body>
