--- a/src/main/resources/templates/my_blog_posts.html
+++ b/src/main/resources/templates/my_blog_posts.html
@@ -21,9 +21,9 @@
 		
 		<tbody>
 			<tr th:each="bp: ${postList}">
-				<td> <a th:href="@{/viewAPost/{id}(id=${bp.id})}" th:text="${bp.postTitle}"></a></td>
+				<td> <a th:href="@{/ViewAPost/{id}(id=${bp.id})}" th:text="${bp.postTitle}"></a></td>
 				<td> <span th:text="${bp.postDateTime}"></span></td>
-				<td> <a th:href="@{/editAPost/{id}(id=${bp.id})}">Update</a>
+				<td> <a th:href="@{/EditAPost/{id}(id=${bp.id})}">Update</a>
 			
 			</tr>
 		</tbody>
