--- a/src/main/resources/templates/view_a_Post.html
+++ b/src/main/resources/templates/view_a_Post.html
@@ -17,8 +17,8 @@
 	</p>
 <br>
 
-<a th:href="@{/blogPosts}">Back</a>
-<span th:if="${editable}"> || <a th:href="@{/editAPost/{id}(id=${blogpost.id})}"> Edit Post</a></span>
+<a th:href="@{/BlogPosts}">Back</a>
+<span th:if="${editable}"> || <a th:href="@{/EditAPost/{id}(id=${blogpost.id})}"> Edit Post</a></span>
 
 </body>
 
