--- a/src/main/resources/templates/edit_blogPost.html
+++ b/src/main/resources/templates/edit_blogPost.html
@@ -7,11 +7,11 @@
 
 
 <body>
-	<h4>Edit post</h4>
+	<h4>Edit Post</h4>
 	<!-- The th:action="@{/saveVisitor}" expression directs the form to POST to the /SaveVisitor endpoint.
 		 The th:object="${visitor}" expression declares the model object to use for collecting the form data.
 		 The three form fields, expressed with th:field, correspond to the fields in the Visitor object. -->
-	<form th:action="@{/SavePost}" th:object="${blogpost}" method="post">
+	<form th:action="@{/SubmitChanges}" th:object="${blogpost}" method="post">
 		<!-- Unfortunate coincidence that the method is the same as the object name -->
 
 		<div class="row">
@@ -35,7 +35,7 @@
 	<br>
 	<!-- The link which sends GET request to "/"  -->
 </body>
-<a th:href="@{/blogPosts}">Back</a>
+<a th:href="@{/BlogPosts}">Back</a>
 <footer th:insert="fragments/footer"></footer>
 
 </html>
