--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,9 +18,9 @@
 		<b>||</b>
 		<a th:href="@{/MakeAPost}"> Make a Blog Post </a>
 		<b>||</b>
-		<a th:href="@{/blogPosts}"> View all Entries </a>
+		<a th:href="@{/BlogPosts}"> View all Entries </a>
 		<b>||</b>
-		<a th:href="@{/myBlogPosts}"> View your Entries</a>
+		<a th:href="@{/MyBlogPosts}"> View your Entries</a>
 	</nav>
 	
 	
