--- a/src/main/resources/templates/blog_posts.html
+++ b/src/main/resources/templates/blog_posts.html
@@ -3,8 +3,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8"/>
 
-<header th:insert="fragments/header">
-	</header>
+<div th:insert="fragments/header"></div>
+	<div th:insert="fragments/navbar"></div>
 
 <body>
 	<h2>Blog Entries</h2>
