--- a/src/main/resources/templates/edit_blogPost.html
+++ b/src/main/resources/templates/edit_blogPost.html
@@ -3,7 +3,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8">
 <link rel="stylesheet" th:href="@{/style/makeAPost.css}">
-<header th:insert="fragments/header"> </header>
+
+<div th:insert="fragments/header"></div>
+<div th:insert="fragments/navbar"></div>
 
 
 <body>
