--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,10 +6,10 @@
 </head>
 
 	<header class="homeBanner" th:fragment="header">
-		<h1 th:href="@{/}" id = "hometitle">It's the JLM Site !!!</h1>
+		<a th:href="@{/}" >
+		<h1 id = "hometitle">It's the JLM Site !</h1>
+		</a>
+		
 	</header>
-	
-<body>
 
-</body>
 </html>
