--- a/src/main/resources/templates/list_visitors.html
+++ b/src/main/resources/templates/list_visitors.html
@@ -6,9 +6,9 @@
 <title>Visitor Management System</title>
 </head>
 
-<header th:insert="fragments/header">
-	</header>
-
+<div th:insert="fragments/header"></div>
+<div th:insert="fragments/navbar"></div>
+	
 <body>
 
 	<h2>Visitors List</h3>
