--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,10 +6,8 @@
 <title>The JLM Site</title>
 </head>
 
-
-	<!-- Inserts Header html with banner from fragments-->
-	<header th:insert="fragments/header">
-	</header>
+<div th:insert="fragments/header"></div>
+<div th:insert="fragments/navbar"></div>
 	
 	<body>
 	
