--- a/src/main/resources/templates/update_visitor.html
+++ b/src/main/resources/templates/update_visitor.html
@@ -4,8 +4,11 @@
 <head>
 <meta charset="UTF-8">
 <title>Visitor Management System</title>
-
 </head>
+
+<div th:insert="fragments/header"></div>
+<div th:insert="fragments/navbar"></div>
+
 <body style="max-width: 960px; margin: 16px auto; padding: 16px">
 	<h3>Update Visitor</h3>
 	<!-- The th:action="@{/saveVisitor}" expression directs the form to POST to the /saveVisitor endpoint.
