--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,14 +6,12 @@
 <title>The JLM Site</title>
 </head>
 
-
-	<!-- Inserts Header html with banner from fragments-->
-	<header th:insert="fragments/header">
-	</header>
+<div th:insert="fragments/header"></div>
+<div th:insert="fragments/navbar"></div>
 	
 	<body>
 	
-<form th:action="@{/process_register}" th:object="${user}"
+		<form th:action="@{/process_register}" th:object="${user}"
             method="post" style="max-width: 600px; margin: 0 auto;">
         <div class="m-3">
             <div class="form-group row">
