Added a clock and icon to fill things out

--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -6,8 +6,8 @@
 }
 
 #hometitle {
+	font-family: "verdanna",sans-serif;
 	color: black;
-	underline: false;
 	text-align: center;
 	width: 80%;
 	border: 3px solid black;
