--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -5,7 +5,7 @@ xmlns:sec = "http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <link th:href="@{/style/main.css}" rel="stylesheet" />
 <meta charset="UTF-8">
 
-	<nav th:fragment="navbar">
+	<nav th:fragment="navbar" id="navbar">
 		
 		<b>||</b>
 		<a th:href="@{/MakeAPost}"> Make a Blog Post </a>
