--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -19,9 +19,10 @@
 	text-align: center;
 	border: 3px solid black;
 	padding: 0.2%;
+	flex-wrap: nowrap;
 }
 #home_title {
-	font-size:4vw;
+	font-size:2em;
 	font-family: "verdanna",sans-serif;
 	color: black;
 	text-align: center;
@@ -29,27 +30,21 @@
 	align-self: center;
 	
 }
-#banner_left{
+#banner_left {
 	padding-left: 10%;
 	padding-right: 10%;
 }
 
-#banner_right{
+#banner_right {
 	padding-left: 10%;
 	padding-right: 10%;
 }
 
-nav{
-	display: flex;
-	margin: 5px;
-	margin: auto;
-}
-
-a{
+a {
 	text-decoration: none;
 	color: black;
 	
 }
-a:hover{
+a:hover {
 	color: #91ae84;
 }
