--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <link th:href="@{/style/main.css}" rel="stylesheet" />
+<link rel="icon" type="image/x-icon" th:href="@{/images/JLMSigil.svg}">
 <meta charset="UTF-8">
 </head>
 
@@ -21,3 +22,7 @@
 
 
 </html>
+
+<!-- 
+	TODO: Shrink icons sizes
+ -->
