--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -1,50 +1,10 @@
 @charset "UTF-8";
 
-.container {
-	display: flex;
-}
-
-.banner_container {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	width: 100%;
-	margin: auto;
-	align-content: center;
-}
-
-#home_link {
-	flex: 1 1 0;
-	align-self: center;
-	text-align: center;
-	border: 3px solid black;
-	padding: 0.2%;
-	flex-wrap: nowrap;
-}
-#home_title {
-	font-size:2em;
-	font-family: "verdanna",sans-serif;
-	color: black;
-	text-align: center;
-	width: 75%;
-	align-self: center;
-	
-}
-#banner_left {
-	padding-left: 10%;
-	padding-right: 10%;
-}
-
-#banner_right {
-	padding-left: 10%;
-	padding-right: 10%;
-}
-
 a {
 	text-decoration: none;
 	color: black;
 	
 }
 a:hover {
-	color: #91ae84;
+	color: #849080;
 }
