--- a/src/main/resources/static/style/banner.css
+++ b/src/main/resources/static/style/banner.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	width: 60%;
+	width: 50%;
 	height: 3%;
 	margin: auto;
 	align-content: center;
@@ -14,6 +14,9 @@
 	align-self: center;
 	padding: 5px;
 	border: 3px solid black;
+	position: relative;
+	top: -4vw;
+	
 }
 
 #banner_img {
@@ -22,6 +25,7 @@
 	height: 100%;
 	margin: auto;
 	align-self: center;
+	padding-top: 2%
 }
 
 #banner_left {
