--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -8,3 +8,34 @@ a {
 a:hover {
 	color: #849080;
 }
+
+.navbar {
+	display: flex;
+	justify-content: flex-end;
+	flex-direction: row;
+	margin-top: 2%;
+	margin-left: 2%;
+	margin-right: 2%;
+	font-size: 1.2em;
+	column-gap: 3px;
+	flex-wrap: nowrap;
+	
+}
+#navbar_empty_space
+{
+	flex-grow: 1;
+}
+
+#logohome{
+	padding-left: 3px;
+	padding-right: 3px;
+	margin: 0px 2.5px;
+}
+
+
+#navlinks li {
+	display: inline;
+	list-style: none;
+	padding-left: 5px;
+	padding-right: 5px;
+}
