--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
 <head>
 <link th:href="@{/style/main.css}" rel="stylesheet" />
-<meta charset="UTF-8">
 </head>
 
 	<header th:fragment="header">
