--- a/bin/src/main/resources/templates/my_blog_posts.html
+++ b/bin/src/main/resources/templates/my_blog_posts.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This is for using Thymeleaf -->
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <meta charset="UTF-8">
 <link rel="stylesheet" th:href="@{/style/makeAPost.css}">
 
