Modifications to syntax

--- a/src/main/resources/templates/my_blog_posts.html
+++ b/src/main/resources/templates/my_blog_posts.html
@@ -8,7 +8,7 @@
 	
 <body>
 <h2>Dashboard:</h2>
-<p>Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b></p>
+<p>Welcome <b>User</b></p>
 <div>
 	<table style="width: 60%;">
 		<thead>
