--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,7 +8,8 @@
 <div th:insert="fragments/header"></div>
 	
 	<body>
-	
+
+        <div th:assert="">
 		<form th:action="@{/process_register}" th:object="${user}"
             method="post" style="max-width: 600px; margin: 0 auto;">
         <div class="m-3">
@@ -44,10 +45,8 @@
              
             <div class="form-group row">
                 <label>Last Name: </label>
-                <div>
-                    <input type="text" th:field="*{lastName}"/>
-                    	<!-- required minlength="2" maxlength="20"/>  -->
-                </div>
+                <input type="text" th:field="*{lastName}"/>
+                <!-- required minlength="2" maxlength="20"/>  -->
             </div>
              
             <div>
@@ -55,8 +54,8 @@
             </div>
         </div>
         </form>
-	
+	    </div>
 	</body>
 	
-	<div th:insert="fragments/footer"><</div>
+	<div th:insert="~{fragments/footer}"><</div>
 </html>
