--- a/src/main/resources/templates/my_blog_posts.html
+++ b/src/main/resources/templates/my_blog_posts.html
@@ -31,7 +31,7 @@
 	</table>
 	</div>
 	<hr>
-	<div sec:authorize="isAuthenticated()">
+	<div>
 		<form th:action="@{/logout}" method="post">
 		<input type="submit" value="Log Out"/>
 		</form>
