--- a/src/main/resources/static/style/banner.css
+++ b/src/main/resources/static/style/banner.css
@@ -2,38 +2,28 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	width: 50%;
+	width: 43%;
 	height: 3%;
-	margin: auto;
-	align-content: center;
+	margin: 3%;
+	align-content: flex-start;
 }
 
 #home_banner {
 	width: 100%;
-	height: 70%;
-	align-self: center;
+	height: 64%;
+	align-self: self-start;
 	padding: 5px;
-	border: 3px solid black;
 	position: relative;
-	top: -4vw;
+	top: 0vw;
 	
 }
 
 #banner_img {
 	padding: 0.2%;
-	width: 100%;
-	height: 100%;
-	margin: auto;
-	align-self: center;
+	width: 75%;
+	height: 50%;
+	margin-left: 20%;
+	align-self: flex-start;
 	padding-top: 2%
-}
 
-#banner_left {
-	padding-left: 12%;
-	padding-right: 12%;
-}
-
-#banner_right {
-	padding-left: 12%;
-	padding-right: 12%;
 }
