--- a/src/main/resources/templates/blog_posts.html
+++ b/src/main/resources/templates/blog_posts.html
@@ -3,7 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8"/>
 
-<div th:insert="fragments/header"></div>
+<div th:insert="~{fragments/header}"></div>
 
 <body>
 	<h2>Blog Entries</h2>
@@ -31,7 +31,7 @@
 	
 </body>
 
-<footer th:insert="fragments/footer">
+<footer th:insert="~{fragments/footer}">
 </footer>
 
 </html>
