--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security/"
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	  xmlns:th="http://www.thymeleaf.org">
 <link th:href="@{/style/navBar.css}" rel="stylesheet"/>
 <meta charset="UTF-8">
 
 <nav th:fragment="nav_bar" class="navbar">
-	
-		<span id="logohome"><a th:href="@{/}">
+
+
+	<span id="logohome"><a th:href="@{/}">
 			<img src="/images/JLMSigil_Icon.svg" width="60" height="60"/>
 		</a></span>
 
 	<span id="navbar_empty_space"></span>
 
 	<ul id="navlinks">
+
 		<li><a th:href="@{/MakeAPost}"> Post </a></li>
-
 		<li><a th:href="@{/BlogPosts}"> Entries </a></li>
-
-		<li sec:authorize="isAuthenticated()">
+		<li>
 			<a th:href="@{/MyBlogPosts}"> DashBoard</a>
 		</li>
-
-		<li sec:authorize="!isAuthenticated()">
-			<a th:href="@{/login}">Login</a>
-		</li>
-
-
+		<li><a th:href="@{/Resume}"> JLMs Resume </a></li>
 	</ul>
 
 </nav>
 
+<hr>
 
 </html>
