--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,18 +5,19 @@
 <title>The JLM Site</title>
 </head>
 
-<div th:insert="fragments/header"></div>
+<div th:insert="~{fragments/header}"></div>
 	
 	<body>
 	
     <div>
         <h1>Login</h1>
-        
+        <b th:if="${errorMsg != null}">No such Username</b>
+    </b>
         <form th:action="@{/login}" method="post">
    <div> 
       <label> User Name : <input type="text" name="uname" /> </label> 
    </div> 
-   <div> 
+   <div>
    <label> Password: <input type="password" name="password" /> </label> 
    </div> 
    <div> 
