--- a/src/main/resources/templates/new_visitor.html
+++ b/src/main/resources/templates/new_visitor.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<div th:insert="fragments/header"></div>
+<div th:insert="~{fragments/header}"></div>
 
 <body style="max-width: 960px; margin: 16px auto; padding: 16px">
 	<h3>Add New Visitor</h3>
