--- a/src/main/resources/templates/update_visitor.html
+++ b/src/main/resources/templates/update_visitor.html
@@ -6,7 +6,7 @@
 <title>Visitor Management System</title>
 </head>
 
-<div th:insert="fragments/header"></div>
+<div th:insert="~{fragments/header}"></div>
 
 <body style="max-width: 960px; margin: 16px auto; padding: 16px">
 	<h3>Update Visitor</h3>
