--- a/src/main/resources/templates/view_a_Post.html
+++ b/src/main/resources/templates/view_a_Post.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <link th:href="@{/style/viewblogpost.css}" rel="stylesheet" />
 
-<div th:insert="fragments/header"></div>
+<div th:insert="~{fragments/header}"></div>
 	
 <body>
 
@@ -23,7 +23,6 @@
 
 </body>
 
-<footer th:insert="fragments/footer">
+<footer th:insert="~{fragments/footer}">
 </footer>
-
 </html>
