--- a/src/main/resources/templates/Resume.html
+++ b/src/main/resources/templates/Resume.html
@@ -25,7 +25,7 @@
 <body dir="ltr" vlink="#800000" text="#000000" link="#000080" lang="en-US"><p class="western" style="letter-spacing: normal; line-height: 0.19in; orphans: 0; widows: 0; margin-bottom: 0in">
 
 <div style="display: flex; align-content: center; flex-direction: column; align-items: center">
-  <h2><b><span>John L Mackin</span></b></h2>
+  <h2><b><a href="/docs/John_Luther_Mackin_Resume-2023.pdf">John L Mackin</a></b></h2>
 <p class="western" style="line-height: 0.19in; orphans: 0; widows: 0; margin-bottom: 0in">
   </font><a href="mailto:JohnLutherMackin@jlmw.xyz">JohnLutherMackin@jlmw.xyz</a><font color="#000000">
     <span style="font-style: normal">
