--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -20,7 +20,8 @@
 		<li>
 			<a th:href="@{/MyBlogPosts}"> DashBoard</a>
 		</li>
-		<li><a th:href="@{/Resume}"> JLMs Resume </a></li>
+		<li><a th:href="@{/Resume}"> JLMs Resume</a></li>
+		<li><a th:href="@{/PGP_Signature}"> PGP Signature</a></li>
 	</ul>
 
 </nav>
