--- a/src/main/resources/static/style/banner.css
+++ b/src/main/resources/static/style/banner.css
@@ -1,17 +1,17 @@
 .banner_container {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-around;
-	width: 43%;
+	justify-content: flex-start;
+	width: 40%;
 	height: 3%;
 	margin: 3%;
-	align-content: flex-start;
+	align-content: center;
 }
 
 #home_banner {
 	width: 100%;
 	height: 64%;
-	align-self: self-start;
+	align-self: center;
 	padding: 5px;
 	position: relative;
 	top: 0vw;
@@ -20,10 +20,11 @@
 
 #banner_img {
 	padding: 0.2%;
-	width: 75%;
-	height: 50%;
-	margin-left: 20%;
-	align-self: flex-start;
-	padding-top: 2%
+	padding-top: 0.2%;
+	width: 101%;
+	height: 47%;
+	margin-left: 35%;
+	align-self: center;
+	padding-top: 2%;
 
 }
