--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,6 +38,7 @@
 	<li>
 		<a th:href="@{/MyBlogPosts}"> DashBoard</a>
 	</li>
+	<li><a th:href="@{/PGP_Signature}"> PGP Signature</a></li>
 
 </ul>
 
