--- a/src/main/resources/templates/Resume.html
+++ b/src/main/resources/templates/Resume.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <html><head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title>John Luther Mackin's Resume</title>
+  <title>JLM's Resume</title>
   <meta name="generator" content="LibreOffice 7.4.4.2 (Linux)">
   <meta name="created" content="00:00:00">
   <meta name="changed" content="2023-03-23T15:37:17.137460102">
