--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -15,13 +15,15 @@
 
 	<ul id="navlinks">
 
-		<li><a th:href="@{/MakeAPost}"> Post </a></li>
-		<li><a th:href="@{/BlogPosts}"> Entries </a></li>
+
+		<li><a th:href="@{/Chat}"> Chat</a></li>
+		<li><a th:href="@{/Resume}"> Resume</a></li>
+		<li><a th:href="@{/PGP}"> PGP</a></li>
+		<li><a th:href="@{/MakeAPost}"> Post</a></li>
+		<li><a th:href="@{/BlogPosts}"> Entries</a></li>
 		<li>
 			<a th:href="@{/MyBlogPosts}"> DashBoard</a>
 		</li>
-		<li><a th:href="@{/Resume}"> JLMs Resume</a></li>
-		<li><a th:href="@{/PGP_Signature}"> PGP Signature</a></li>
 	</ul>
 
 </nav>
