--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,15 +30,15 @@
 </div>
 
 <ul id="navlinks">
-	<li><a th:href="@{/Resume}"> Resume </a></li>
-	<li><a th:href="@{/MakeAPost}"> Post </a></li>
-
-	<li><a th:href="@{/BlogPosts}"> Entries </a></li>
-
+	<li><a th:href="@{/Chat}"> Chat</a></li>
+	<li><a th:href="@{/Resume}">Resume </a></li>
+	<li><a th:href="@{/PGP}"> PGP</a></li>
+	<li><a th:href="@{/MakeAPost}"> Post</a></li>
+	<li><a th:href="@{/BlogPosts}"> Entries</a></li>
 	<li>
 		<a th:href="@{/MyBlogPosts}"> DashBoard</a>
 	</li>
-	<li><a th:href="@{/PGP_Signature}"> PGP Signature</a></li>
+
 
 </ul>
 
